# AutoTrade

./: .env.example  .gitignore  README.md  pyproject.toml  strategies.toml
docs/: architecture.md  hull-non-overlapping-window-validation-2026-07.md  hull-rolling-start-comparison-2026-07.md  hull-suite-full-equity-validation-2026-07.md  hull-suite-protected-validation-2026-07.md  hull-variant-comparison-2026-07.md  multi-divergence-oos-validation-2026-07.md  multi-divergence-strategy.md  multi-divergence-v5.md  pre-strategy-checklist.md  runbook.md  strategy-management.md  strategy-validation.md
research/: hull-variants.toml  hull_non_overlapping_windows.py
scripts/: register-watchdog.ps1  run-daemon.ps1  watchdog.ps1
src/autotrade/: __init__.py  backtest.py  binance_rest.py  candles.py  cli.py  config.py  daemon.py  errors.py  intents.py  journal.py  locking.py  market_data.py  observability.py  rate_limit.py  risk.py  risk_control.py  rules.py  shadow.py  strategy_adapter.py  strategy_manager.py  trading.py  user_stream.py
tests/: test_backtest.py  test_binance_rest.py  test_cli.py  test_config.py  test_daemon.py  test_divergence_strategy.py  test_hull_strategy.py  test_hull_window_analysis.py  test_intents.py  test_journal.py  test_lifecycle.py  test_locking.py  test_market_data.py  test_observability.py  test_rate_limit.py  test_risk.py  test_risk_control.py  test_rules.py  test_shadow.py  test_signing.py  test_strategy.py  test_strategy_adapter.py  test_strategy_manager.py  test_strategy_reversal.py  test_trading.py  test_user_stream.py
(+9 files in other folders)
