[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrade-testnet"
version = "0.1.0"
description = "Testnet-first Binance USD-M Futures trading core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "websockets>=14,<17",
]

[project.scripts]
autotrade = "autotrade.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

